[package]
name = "reydenx"
version = "0.1.3"
edition = "2021"
authors = ["pixel365"]
license = "MIT OR Apache-2.0"
keywords = ["twitch", "trovo", "youtube", "vkplay", "stream"]
readme = "README.md"
categories = ["games"]
description = "Implementation of the Reyden-X API. Reyden-X is an automated service for promoting live broadcasts on external sites with integrated system of viewers and views management."
repository = "https://github.com/pixel365/reydenx"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version="1.0" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features=["blocking", "json"] }
chrono = "0.4"
